<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="@color/titlebar"
		    android:orientation="vertical">
 <ScrollView 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg" >
      
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="@color/bg"
		    android:orientation="vertical" >
		            
		    <TextView
		        android:id="@+id/movieName"
		        android:layout_width="match_parent"
		        android:layout_height="40dp"
		        android:background="@color/crimson"
		        android:text="@string/movieName"
		        android:textColor="#fff"
		        android:textSize="18sp" 
		        android:gravity="center"
		        android:textStyle="bold"
		        />
		    
		    <RelativeLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="10dp">
				    <ImageView
				        android:layout_marginTop="15dp"
				        android:id="@+id/movie_image"
				        android:layout_width="135dp"
				        android:layout_height="180dp"
				        android:layout_marginRight="10dp"
				        android:layout_alignParentLeft="true"
				        android:src="@drawable/ic_launcher" />
				    
				    <LinearLayout
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:orientation="vertical"
				    android:layout_toRightOf="@+id/movie_image"
				    android:layout_marginTop="25dp">
				    
						    <RelativeLayout
						        android:layout_width="match_parent"
				    			android:layout_height="fill_parent"
				    			android:background="@color/bg"				    			 
				    			>
				    			
								    <TextView
								        android:id="@+id/genere"
								        android:layout_width="wrap_content"
								        android:layout_height="wrap_content"
								        android:text="@string/genere"
								        android:textSize="14sp"
								        android:textStyle="bold"
								        />
				
								    <TextView
								        android:id="@+id/genere_name"
								        android:textColor="@color/crimson"
								        android:text="@string/genere_name"
								        android:layout_width="wrap_content"
								        android:layout_height="wrap_content"
								        android:textSize="14sp" 
								        android:layout_toRightOf="@+id/genere"
								        android:layout_marginLeft="5dp"
								        
								        />
							  
								    
							</RelativeLayout> 			    
						    
						    
							<RelativeLayout
						        android:layout_width="match_parent"
				    			android:layout_height="fill_parent"
				    			android:orientation="horizontal"
				    			android:background="@color/bg"
				    			android:layout_marginTop="5dp" 
				    			>
				    			
								    <TextView
								        android:id="@+id/language"
								        android:layout_width="wrap_content"
								        android:layout_height="wrap_content"
								        android:text="@string/language"
								        android:textSize="14sp"
								        android:textStyle="bold"
								        />
				
								    <TextView
								        android:id="@+id/txt_language"
								        android:text="@string/nepali"
								        android:layout_width="wrap_content"
								        android:layout_height="wrap_content"
								        android:textSize="14sp" 
								        android:layout_toRightOf="@+id/language"
								        android:textColor="@color/crimson"
								        android:layout_marginLeft="5dp"
								        />
								        
							</RelativeLayout> 
							<RelativeLayout
						        android:layout_width="match_parent"
				    			android:layout_height="fill_parent"
				    			android:orientation="horizontal"
				    			android:background="@color/bg"
				    			android:layout_marginTop="5dp" 
				    			>
				    			
								    <TextView
								        android:id="@+id/releasedate"
								        android:layout_width="wrap_content"
								        android:layout_height="wrap_content"
								        android:text="@string/releasedate"
								        android:textStyle="bold"
								        android:textSize="14sp"
								        />
				
								    <TextView
								        android:id="@+id/txt_releasedate"
								        android:text="@string/date"
								        android:layout_width="wrap_content"
								        android:layout_height="wrap_content"
								        android:textSize="14sp" 
								        android:layout_toRightOf="@+id/releasedate"
								        android:textColor="@color/crimson"
								        android:layout_marginLeft="5dp"
								        />
								        
							</RelativeLayout>
							<TextView
						        android:id="@+id/userRating"
						        android:layout_width="wrap_content"
						        android:layout_height="wrap_content"
						        android:text="@string/thumbsup"
						        android:textSize="14sp"
						        android:textStyle="bold"
						        android:layout_marginTop="10dp"
						        android:layout_gravity="center_horizontal"
							/>
							<RelativeLayout 
							    android:layout_width="match_parent"
				    			android:layout_height="fill_parent"
				    			android:layout_marginTop="10dp"
				    			android:gravity="center_horizontal">
							
									<ImageView
								        android:id="@+id/imgthumb"
								        android:layout_width="48dp"
								        android:layout_height="48dp"
								        android:contentDescription="@string/imgmovie"							       								        
								        android:src="@drawable/thumbsup"
								        android:clickable="true" >
								    </ImageView>
								    <ImageView
								        android:id="@+id/imgthumbfill"
								        android:layout_width="48dp"
								        android:layout_height="48dp"
								        android:contentDescription="@string/imgmovie"
								        android:src="@drawable/thumbsupfill"
								        android:clickable="true"
								        android:visibility="invisible" >
								    </ImageView>
		    				</RelativeLayout>
					</LinearLayout>
			</RelativeLayout>
			<RelativeLayout
		        android:layout_width="match_parent"
    			android:layout_height="fill_parent"
    			android:layout_marginBottom="10dp"	>
    			
				    <TextView
				        android:id="@+id/yourrate"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:textSize="14sp"
				        android:layout_marginTop="16dp"
				        android:layout_marginLeft="10dp"
				        android:visibility="visible"
				        />
								    
				</RelativeLayout> 	
		    
		    
		    <TextView 
		        android:id="@+id/description"
		        android:textSize="16sp"
		        android:textColor="@color/crimson"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:text="@string/description"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		        android:textStyle="bold"
		        
		        />
		    
		    <TextView 
		        android:id="@+id/description_content"
		        android:textSize="12sp"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:text="@string/description_content"
		        android:layout_marginLeft="10dp"
		        android:layout_marginTop="10dp"
		        android:layout_marginRight="10dp"
		        />
		    
		    <TextView 
		        android:id="@+id/user_review"
		        android:textColor="@color/crimson"
		        android:textSize="16sp"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		    	android:text="@string/user_review"
		        android:layout_margin="10dp"	        
		        android:textStyle="bold" />
	    
		</LinearLayout>
		
		
</ScrollView>
		    <ListView 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="@color/titlebar"
		    android:orientation="vertical">
		        
		    </ListView>
	
</LinearLayout>


