<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="@color/bg">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg"
    android:orientation="vertical" >
    
    <RelativeLayout
         android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg" >

        <ImageView
            android:id="@+id/login_image"
            android:layout_width="144dp"
            android:layout_height="72dp"
            android:contentDescription="@string/Login"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/splash1" />
    
	</RelativeLayout>

    
    <EditText
        android:id="@+id/login_EdittxtUsername"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/styletext"
        android:textSize="14sp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/style_editbox"
        android:ems="10"
        android:padding="10dp"
        android:hint="@string/youremail"
        android:inputType="textPersonName">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/login_Edittxtpassword"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:textSize="14sp"
        android:textColor="@color/styletext"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/style_editbox"
        android:ems="10"
        android:padding="10dp"
        android:hint="@string/pass"
        android:inputType="textPassword" >
        
    </EditText>
    
    
	<RelativeLayout
		android:layout_width="match_parent"
	    android:layout_height="fill_parent"
	    android:gravity="center_horizontal">
		    <Button
		        android:id="@+id/btn_login"
		        android:layout_width="100dp"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		       	android:layout_marginLeft="50dp"
		        android:layout_marginRight="10dp"
		        android:layout_alignParentLeft="true"
		        android:background="@drawable/round_button_green"
		        android:textColor="#fff"
		        android:text="@string/Login" />

	    	<Button
	    	    android:id="@+id/btn_register"
	    	    android:layout_width="100dp"
	    	    android:layout_height="wrap_content"
	    	    android:layout_alignParentRight="true"
	    	    android:layout_marginTop="20dp"
	    	    android:layout_marginLeft="10dp"
	        	android:layout_marginRight="50dp"
	    	    android:background="@drawable/round_button"
	    	    android:text="@string/register"
	    	    android:textColor="#fff" />
	    
	</RelativeLayout>
   

   <!-- <TextView
       android:id="@+id/textView1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/register"
       android:textSize="14sp"
       android:textColor="@color/styletext"
       android:layout_gravity="center_horizontal"
       android:layout_marginTop="10dp"
       android:clickable="true" /> -->

   <TextView
       android:id="@+id/textView2"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/or"
       android:textSize="14sp" 
       android:textColor="@color/styletext"
       android:layout_gravity="center_horizontal"
       android:layout_marginTop="15dp"
       android:layout_marginBottom="10dp"/>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:src="@drawable/fb"
        android:clickable="true"
        android:contentDescription="@string/facebook"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_gravity="center_horizontal" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:src="@drawable/google"
        android:contentDescription="@string/google"
        android:clickable="true"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
</ScrollView>
