<?xml version="1.0" encoding="utf-8"?>
	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"  
   	android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/bg">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/Rating_txtRate"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/ratetitle"
            android:background="@color/titlebar"
	        android:textColor="#fff"
	        android:textSize="18sp"
	        android:textStyle="bold" 
             />
        
        

        <RatingBar
            android:id="@+id/ratingbar_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp" />

        <TextView
            android:id="@+id/Rating_txtShowRate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Ratingcount"
            android:textColor="@color/titlebar"
            android:textSize="14sp" 
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/rating_txtview_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="10dp"
            android:text="@string/review"
            android:textColor="@color/titlebar"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
             android:id="@+id/rating_edittxtreview"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/style_editbox"
            android:ems="10"
            android:hint="@string/review"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:textColor="@color/styletext"
            android:textSize="14sp">

            
        </EditText>

        
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_button"
            android:text="@string/submit"
            android:textColor="#fff" />
    </LinearLayout>

</ScrollView>